<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Password_Recovery">

    <ImageView
        android:layout_width="133dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/default_user" />



    <TextView
        android:layout_width="wrap_content"
        android:text="@string/Howyouwouldliketorestoreyourpassword"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:background="@drawable/forget_email_shape"
            android:text="@string/email"
            android:drawablePadding="112dp"
            android:paddingStart="5dp"
            android:layout_height="wrap_content"/>



        <RadioButton
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:id="@+id/phone"
            android:paddingStart="5dp"
            android:background="@drawable/forget_phone_shape"
            android:text="@string/phone"
            android:layout_height="wrap_content"/>


    </RadioGroup>


    <Button
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/login"
        style="@style/MyButtonStyle"
        android:id="@+id/moveToLoginActiv"
        android:background="@drawable/fullwidth_button_backgroud"
        android:textStyle="normal" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>