<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".newPassword">

    <ImageView
        android:layout_width="133dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/default_user" />


    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:text="@string/SetupNewPassword"
        style="@style/subHeadingStyle"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/Pleasesetupanewpasswordforyouraccount"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_width="match_parent"
        android:hint="Password"
        android:layout_marginTop="5dp"
        android:paddingVertical="12dp"
        style="@style/fieldsStyle"
        android:background="@drawable/fileds_backgroudn"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="Confirm Password"
        android:layout_marginTop="5dp"
        android:paddingVertical="12dp"
        style="@style/fieldsStyle"
        android:background="@drawable/fileds_backgroudn"
        android:layout_height="wrap_content"/>



    <Button
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/login"
        style="@style/MyButtonStyle"
        android:id="@+id/moveToLoginActiv"
        android:background="@drawable/fullwidth_button_backgroud"
        android:textStyle="normal" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>