<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="left"
            android:src="@drawable/round_shape" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="40dp"
            android:src="@drawable/round_shape_left" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:paddingHorizontal="15dp"
        style="@style/headingStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/Goodtoseeyouback"
            android:textSize="20sp"
            android:layout_marginStart="10dp"

            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:src="@drawable/heart"/>


    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="Email"
        android:layout_marginHorizontal="15dp"
        style="@style/fieldsStyle"
        android:paddingVertical="12dp"
        android:background="@drawable/fileds_backgroudn"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/moveToPassowrdActivity"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/fullwidth_button_backgroud"
        android:fontFamily="@font/nunito"
        android:text="@string/Next"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>