<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"

style="@style/ActivityBackground"
    tools:context=".AdminFolder.ProductFragmentAdmin">
    <!--    top bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"

        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"

                android:layout_gravity="center"

                app:cardCornerRadius="100dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"



                    android:src="@drawable/default_user" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:background="@color/lightPrimary"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_settings_24"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_marginHorizontal="2dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightPrimary"
                    android:src="@drawable/baseline_message_24"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightPrimary"
                    android:src="@drawable/baseline_message_24"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
    <!--anncoucement-->
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/admin_name"
        style="@style/subHeadingStyle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"

            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="7"
                android:padding="10dp"

                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:text="@string/HelloUser"
                    style="@style/subHeadingStyle"



                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/forgetPassword"
                    android:textSize="20sp"
                    style="@style/subHeadingStyle"

                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <ImageView
                android:background="@drawable/full_circle_bg"
                android:layout_marginStart="10dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="7dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/arrow"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/options"

        style="@style/subHeadingStyle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>



    <!--    option buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <Button
            android:layout_marginHorizontal="3dp"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/addbrand"
            style="@style/MyButtonStyle"
            android:id="@+id/moveToBrandPage"
            android:background="@drawable/fullwidth_button_backgroud"
            android:textStyle="normal" />
        <Button
            android:layout_marginHorizontal="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/addCategory"
            style="@style/MyButtonStyle"
            android:id="@+id/moveToCategoryPage"
            android:layout_marginTop="5dp"
            android:background="@drawable/fullwidth_button_backgroud"
            android:textStyle="normal" />
        <Button
            android:layout_marginHorizontal="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/addProduct"
            style="@style/MyButtonStyle"
            android:id="@+id/moveToProductPage"

            android:layout_marginTop="5dp"

            android:background="@drawable/fullwidth_button_backgroud"
            android:textStyle="normal" />

    </LinearLayout>

    <!--    Products-->

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/product"

        style="@style/subHeadingStyle"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/productRecyclerView"
        tools:listitem="@layout/single_product_design"
        android:layout_height="wrap_content"/>

</LinearLayout>