<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".Password">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="left"
        android:src="@drawable/round_shape" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-100dp"
        app:cardCornerRadius="100dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="133dp"
            android:layout_height="128dp"



            android:src="@drawable/default_user" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:text="@string/HelloUser"
        style="@style/subHeadingStyle"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:hint="Password"
        android:layout_marginTop="59dp"
        android:paddingVertical="12dp"
        style="@style/fieldsStyle"
        android:background="@drawable/fileds_backgroudn"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/login"
        style="@style/MyButtonStyle"
        android:id="@+id/moveToAndimIntro"
        android:background="@drawable/fullwidth_button_backgroud"
        android:textStyle="normal" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/forgetPassword"
            android:id="@+id/moveToPasswordRecovery"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
</LinearLayout>

</LinearLayout>