<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    style="@style/ActivityBackground"

    tools:context=".MainActivity">

    <!--  image  -->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="150dp"
         app:cardElevation="5dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/store_logo"
            android:paddingHorizontal="25dp"
            android:paddingVertical="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
   style="@style/headingStyle"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="230dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/letsGetStarted"
        style="@style/MyButtonStyle"
        android:id="@+id/moveToCreateAcount"
        android:background="@drawable/fullwidth_button_backgroud"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/moveToLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ialreadyHaveAnAcount"
            android:textSize="16sp" />

        <ImageView
            android:background="@drawable/full_circle_bg"
            android:layout_marginStart="10dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/arrow"/>

    </LinearLayout>

</LinearLayout>